new routes and swagger
