# routes/movies.js
@@ -1,0 +1,12 @@
+const express = require('express');
+const router = express.Router();
+
+const moviesController = require('../controllers/movies');
+
+router.get('/', moviesController.getAllMovies);
+router.get('/:id', moviesController.getSingleMovie);
+router.post('/', moviesController.createMovie);
+router.put('/:id', moviesController.updateMovie);
+router.delete('/:id', moviesController.deleteMovie);
+
+module.exports = router;
